# ldns

./: .gitignore  README.md  pyproject.toml
src/ldns/: cache.py  cli.py  config.py  domain.py  record.py  server.py  service.py  util.py
tests/: test_cache.py  test_server.py
