[build-system]
requires = ["uv_build>=0.7.3,<0.8.0"]
build-backend = "uv_build"

[project]
name = "ldns"
version = "0.1.0"
authors = [
    { name="Joao Figueiredo", email="joao@azulhq.com" },
]
description = "simple DNS utilities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dnslib>=0.9.26",
    "platformdirs>=4.3.8",
    "rich>=14.0.0",
    "typer>=0.15.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-freezer>=0.4.9",
]

[project.scripts]
ldns = "ldns.cli:app"
